tests/lit/tcheck/records_00.isa
// RUN: not %iii --batchmode %s | filecheck %s
// Copyright (C) 2023-2025 Intel Corporation

record R = {
    x : Integer,
    x : Integer
// CHECK: Type error: fieldname `x` is declared multiple times
};
